<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:clickable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/keyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/product_current_quantity" />

        <TextView
            android:id="@+id/valueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/holder_num"
            android:textAlignment="viewEnd" />


    </LinearLayout>

    <Button
        android:id="@+id/learnMoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00000000"
        android:outlineProvider="none"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/holder_text"
        android:textAlignment="viewStart"
        android:textColor="@color/accentTwo" />

</LinearLayout>