<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="false"
    android:background="#FFFFFF"
    tools:context=".ui.authentication.Login"
    android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20sp"
                android:contentDescription="@string/logo_desc"
                android:transitionName="logo_image"
                app:srcCompat="@drawable/app_logo" />

            <TextView
                android:id="@+id/loginWelcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:fontFamily="@font/quattrocento"
                android:text="@string/login_welcome_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:transitionName="logo_text" />

            <TextView
                android:id="@+id/loginTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/padauk"
                android:text="@string/login_title"
                android:textAlignment="center"
                android:textSize="18sp"
                android:transitionName="text_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/forgotPasswordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:backgroundTint="#00000000"
                    android:elevation="0dp"
                    android:outlineProvider="none"
                    android:text="@string/forget_password_btn"
                    android:textColor="@color/colorText" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#00000000"
                    android:backgroundTint="@color/colorText"
                    android:elevation="0dp"
                    android:text="@string/login_btn"
                    android:textColor="#FFFFFF"
                    android:transitionName="btn_trans" />

                <Button
                    android:id="@+id/newUserButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:backgroundTint="#00000000"
                    android:elevation="0dp"
                    android:outlineProvider="none"
                    android:text="@string/new_user_btn"
                    android:textColor="@color/colorText"
                    android:transitionName="new_user_trans" />

                <ProgressBar
                    android:id="@+id/loginProgressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:transitionName="email_trans">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:transitionName="password_trans"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </LinearLayout>

</ScrollView>