<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/summaryCardView"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="5dp"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/summaryTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/padauk"
            android:text="@string/red_zone_items"
            android:textColor="@color/colorTextOnWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/summaryNumberTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingEnd="20sp"
            android:text="@string/holder_num"
            android:textColor="@color/accentTwo" />

    </LinearLayout>

    <TextView
        android:id="@+id/learnMoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingTop="5dp"
        android:text="@string/holder_text"
        android:textColor="@color/colorText" />

</LinearLayout>

</androidx.cardview.widget.CardView>
